@@ -2502,7 +2502,7 @@ AT_DATA([callee.cob], [
        LINKAGE          SECTION.
        01 P1            PIC X.
        01 P2            PIC X(6).
-       PROCEDURE        DIVISION USING P1 P2.
+       PROCEDURE        DIVISION USING P1 OPTIONAL P2.
            IF P2 NOT OMITTED
               DISPLAY P2
               END-DISPLAY
@@ -2517,6 +2517,8 @@ AT_DATA([caller.cob], [
        WORKING-STORAGE  SECTION.
        01 P1            PIC X    VALUE "A".
        PROCEDURE        DIVISION.
+           CALL "callee" USING P1
+           END-CALL.
            CALL "callee" USING P1 OMITTED
            END-CALL.
            STOP RUN.
